// Code generated by go2proto. DO NOT EDIT.
syntax = "proto3";

package xyz.block.ftl.go2proto.test;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/block/ftl/cmd/go2proto/testdata/testdatapb";

enum Enum {
  ENUM_A = 0;
  ENUM_B = 1;
}

message Message {
  google.protobuf.Timestamp time = 1;
  optional google.protobuf.Timestamp opt_time = 2;
  google.protobuf.Duration duration = 3;
  bool invalid = 4;
  Nested nested = 5;
  repeated Nested repeated_nested = 6;
}

message Nested {
  string nested = 1;
}

message Root {
  int64 int = 1;
  string string = 2;
  Message message_ptr = 4;
  Enum enum = 5;
  SumType sum_type = 6;
  optional int64 optional_int = 7;
  optional int64 optional_int_ptr = 8;
  optional Message optional_msg = 9;
  repeated int64 repeated_int = 10;
  repeated Message repeated_msg = 11;
  bytes url = 12;
  optional string optional_wrapper = 13;
  string external_root = 14;
  string key = 15;
  optional google.protobuf.Timestamp optional_time = 16;
  optional Message optional_message = 17;
  optional Message optional_message_ptr = 18;
  map<string, google.protobuf.Timestamp> map = 19;
}


message SubSumType {
  oneof value {
    SubSumTypeA a = 1;
    SubSumTypeB b = 2;
  }
}

message SubSumTypeA {
  string a = 1;
}

message SubSumTypeB {
  string a = 1;
}


message SumType {
  oneof value {
    SubSumTypeA sub_sum_type_a = 4;
    SubSumTypeB sub_sum_type_b = 5;
    SumTypeA a = 1;
    SumTypeB b = 2;
    SumTypeC c = 3;
  }
}

message SumTypeA {
  string a = 1;
}

message SumTypeB {
  int64 b = 1;
}

message SumTypeC {
  double c = 1;
}

